welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:3: error: ')' expected but ',' found.
	if (talking, n<7 \ n>23)
                   ^parotTrouble:9: error: illegal start of simple expression
}
^